crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier1__diverts__variable-divert-target.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier1/diverts/variable-divert-target
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "Here.\n" [Done]
outcome: Done
